@@ -1,2 +1,3 @@
+EBUILD cl-base-meta-11.6-r1.ebuild 635 RMD160 32350a58ce646a38e65a2446c12e73a399995c1b SHA1 ef814936e1d188fbe71c4b6414a2431e9e838314 SHA256 46b5fea1ca3867e2dd91687e2510b2dba735efd0fce020484b024dc831b7be41
 EBUILD cl-base-meta-11.6.ebuild 596 RMD160 40e06d5ed3a8dbf4eee4e5da5d944d72c49df57f SHA1 b8ab3f511fcf8810f28c047902279d634f03ffea SHA256 c2e1522b0091d3652c5bdfb4c9f758babffd86d9d3501238cd3549f7635def5c
-MISC ChangeLog 1558 RMD160 ba1c31c49c490030f2f50cb42772c389c3363e52 SHA1 75ea18e9b40f2d0633393d4fd7a2637241e47d40 SHA256 d65a43402ceaabdddc494f25568239d42a8b5b4d8144754a48512867e759d283
+MISC ChangeLog 1705 RMD160 cd79837d5a78dda536f12484e04b8c873c24dfef SHA1 7717fed7448f4dadb71a69552d4897380a85b49b SHA256 d800288c3b0d49707f596f676a2724eb2b8a50736add5471c351760210db1e2d
