@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-base-meta-11.6-r1 (02 Jun 2011)
+
+  02 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-base-meta-11.6-r1.ebuild:
+  Add grub2
+
 *cl-base-meta-11.6 (18 May 2011)
 
   18 May 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
